0.61 - added query filter plugin framework
	added regex filter
	added normalization translation
	fixed error in sqlrconfigfile class that could cause sqlr-start to
		crash if one instance defines addresses but the next doesn't
	added query status flag to sqlrservercursor
	tweaked odbc driver's SQLGetTypeInfo()
	field name is passed into runResultSetTranslations() now
	added support for maxitembuffersize, maxselectlistsize,
		and maxbindcount for firebird
	added native api for node.js
	added recognition of bigint, ubigint and uniqueidentifier fields in
		freetds/sybase
	added nullsasnulls command to sqlrsh
	added workaround for freetds empty (but non-null) text fields not
		getting properly converted to null-terminated empty strings
	fetchatonce, maxitembuffersize and maxselectlistsize are set to
		defaulting values if invalid values are given for them

0.60 - fixed true->false transposition in sqlrservercontroller::interceptQuery
		that could lead to a reLogIn loop
	disabled -Werror for gcc < 2.7
	applied George Carrette's patch to fix PDO connectstring options
	migrated directory/file paths info into sqlrpaths class
	removed undocumented and not-so-relevent-these-days
		MAX_CONNECTIONS/overridemaxconnections failsafe in sqlr-start
	fixed java header detection for javac located in /usr/bin
	updated java api to support non-null-tolerant implementations of
		environment::NewStringUTF()
	the perl api builds correctly on OSR5 again
	the postgresql sslmode is omitted entirely from the connect string now,
		if it's disabled, to prevent problems with older versions of
		postgresql that don't support the parameter at all
	mono 2.8 or greater is required now
	added a datedelimiters attribute to the instance tag in sqlrelay.conf
		to limit what date delimiters are used when translating dates
	re-added mssqlserver detection, which had been accidentally removed
	fixed statically-linked build
	fixed mysql lob field bug that could cause a crash
