@@ -54,6 +54,7 @@ use.</p>
 <li><b>tries</b> - If a connection fails, it will be retried this many times.</li>
 <li><b>retrytime</b> - If a connection fails, it will be retried on this interval (in seconds).</li>
 <li><b>debug</b> - If this is set to 1 or to a file name then debug is enabled.  If set to a file name then debug will be written to the file.  If set to 1 then debug will be written to standard output.  Defaults to 0.</li>
+<li><b>lazyconnect</b> - By default, the SQL Relay client does "lazy connects".  I.e. the connection to the SQL Relay server isn't established until the first query or other operation is run.  This optimizes availability of the connection pool but is inconstent with most other database API's.  Setting this parameter to 0 causes the connection to the SQL Relay server to be established immediately and the constructor to fail, returning undef, if the connection cannot be established.  Defaults to 1.</li>
 </ul>
 
 <p>Database handle attributes may be specified in the SQLRelay component of the connect string to control connection and statement behavior.  For example:</p>
@@ -79,8 +80,8 @@ use.</p>
 <li><b>password</b> - The password to use when logging into SQL Relay.</li>
 </ul>
 
-<p>After calling the connect(), a session is established when the first 
-query is run.</p>
+<p>After calling the constructor, a session is established when the first 
+query or other operation is run, unless lazyconnects=0 is used.</p>
 
 <p>For the duration of the session, the client occupies one of the database
 connections, so care should be taken to minimize the length of a
