@@ -143,6 +143,7 @@ if (!$dbh) {
 <li><b>tries</b> - If a connection fails, it will be retried this many times.</li>
 <li><b>retrytime</b> - If a connection fails, it will be retried on this interval (in seconds).</li>
 <li><b>debug</b> - If this is set to 1 or to a file name then debug is enabled.  If set to a file name then debug will be written to the file.  If set to 1 then debug will be written to the browser.  Defaults to 0.</li>
+<li><b>lazyconnect</b> - By default, the SQL Relay client does "lazy connects".  I.e. the connection to the SQL Relay server isn't established until the first query or other operation is run.  This optimizes availability of the connection pool but is inconstent with most other database API's.  Setting this parameter to 0 causes the connection to the SQL Relay server to be established immediately and the constructor to fail, returning 0, if the connection cannot be established.  Defaults to 1.</li>
 </ul>
 
 <p>These additional connect string variables control the default statement attributes:</p>
@@ -163,7 +164,7 @@ if (!$dbh) {
 </ul>
 
 <p>After calling the constructor, a session is established when the first 
-query is run.</p>
+query or other operation is run, unless lazyconnects=0 is used.</p>
 
 <p>For the duration of the session, the client occupies one of the database
 connections, so care should be taken to minimize the length of a
