@@ -1,0 +1,38 @@
+top_builddir = ../..
+
+include ../../config.mk
+
+.SUFFIXES: .lo
+
+.cpp.lo:
+	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(PLUGINCPPFLAGS) $(COMPILE) $< $(OUT)$@
+
+.cpp.obj:
+	$(LTCOMPILE) $(CXX) $(CXXFLAGS) $(WERROR) $(PLUGINCPPFLAGS) $(COMPILE) $<
+
+all: sqlrresultsettranslation_reformatdatetime.$(LIBEXT)
+
+clean:
+	$(LTCLEAN) $(RM) *.lo *.o *.obj *.$(LIBEXT) *.lib *.exp *.idb *.pdb *.manifest
+	$(RMTREE) .libs
+
+sqlrresultsettranslation_reformatdatetime.$(LIBEXT): reformatdatetime.cpp reformatdatetime.$(OBJ)
+	$(LTLINK) $(LINK) $(OUT)$@ reformatdatetime.$(OBJ) $(LDFLAGS) $(PLUGINLIBS) $(MODLINKFLAGS)
+
+install: $(INSTALLLIB)
+
+installdll:
+	$(MKINSTALLDIRS) $(libexecdir)
+	$(LTINSTALL) $(CP) sqlrresultsettranslation_reformatdatetime.$(LIBEXT) $(libexecdir)
+
+installlib: $(INSTALLSHAREDLIB)
+
+installsharedlib:
+	$(MKINSTALLDIRS) $(libexecdir)
+	$(LTINSTALL) $(CP) sqlrresultsettranslation_reformatdatetime.$(LIBEXT) $(libexecdir)
+	$(RM) $(libexecdir)/sqlrresultsettranslation_reformatdatetime.a
+	$(RM) $(libexecdir)/sqlrresultsettranslation_reformatdatetime.$(LIBEXT)
+	$(MODULERENAME) $(libexecdir)/sqlrresultsettranslation_reformatdatetime.so so $(MODULESUFFIX)
+
+uninstall:
+	$(RM) $(libexecdir)/sqlrresultsettranslation_reformatdatetime.*
